// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DuetColor overview 1`] = `
<DocumentFragment>
  <table
    class="css-1ea51ic-TableRowContainer"
  >
    <tbody>
      <tr>
        <td>
          <div
            class="css-5qp9u2-BaseDuetColor"
            style="display: inline-block;"
          >
            <div
              class="css-27pr37-BaseDuetColor"
            />
          </div>
          <div
            class="css-lxho8i-BaseDuetColor"
          >
            #004d80
          </div>
          <div
            class="css-lxho8i-BaseDuetColor"
          >
            rgb(0, 77, 128)
          </div>
        </td>
        <td>
          <div
            class="css-1c55f8o-BaseDuetColor"
          >
            Primary Blue Dark
          </div>
          <p>
             Dark version of primary blue that is accessible with white. Most commonly used to indicate hover and active states of an item with primary blue background.
          </p>
        </td>
        <td>
          <code
            class="css-yzbbbe-BaseDuetColor"
          >
            $color-primary-dark
          </code>
          <code
            class="css-nedzn2-BaseDuetColor"
          >
            var(--color-primary-dark)
          </code>
        </td>
        <td
          class="css-1wvasw1-BaseDuetColor"
        >
          <span
            class="css-10wa0qw-BaseDuetColor"
          >
            8.85:1
          </span>
          <svg
            aria-hidden="true"
            class="css-5d88xw-BaseDuetColor"
            fill="currentColor"
            height="16"
            role="img"
            style="display: inline-block; user-select: none; vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M13.78 4.22a.75.75 0 010 1.06l-7.25 7.25a.75.75 0 01-1.06 0L2.22 9.28a.75.75 0 011.06-1.06L6 10.94l6.72-6.72a.75.75 0 011.06 0z"
              fill-rule="evenodd"
            />
          </svg>
        </td>
        <td
          class="css-1wvasw1-BaseDuetColor"
        >
          <svg
            aria-hidden="true"
            class="css-vw0gn3"
            fill="currentColor"
            height="16"
            role="img"
            style="display: inline-block; user-select: none; vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M8 16A8 8 0 108 0a8 8 0 000 16zm3.78-9.72a.75.75 0 00-1.06-1.06L6.75 9.19 5.28 7.72a.75.75 0 00-1.06 1.06l2 2a.75.75 0 001.06 0l4.5-4.5z"
              fill-rule="evenodd"
            />
          </svg>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`DuetColor palette 1`] = `
<DocumentFragment>
  <table
    class="css-1uqr26a-DuetColorPalette"
  >
    <colgroup>
      <col
        span="1"
      />
      <col
        span="1"
      />
      <col
        span="1"
      />
      <col
        span="1"
      />
      <col
        span="1"
      />
    </colgroup>
    <thead>
      <tr>
        <th
          class="css-1k1hrut"
        >
          Example
        </th>
        <th
          class="css-1uct0zt"
        >
          Description
        </th>
        <th
          class="css-1k1hrut"
        >
          Token
        </th>
        <th
          class="css-1b9sdrw"
        >
          Contrast
        </th>
        <th
          class="css-14nwjw6"
        >
          Status
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <div
            class="css-5qp9u2-BaseDuetColor"
            style="display: inline-block;"
          >
            <div
              class="css-qv0k7b-BaseDuetColor"
            />
          </div>
          <div
            class="css-lxho8i-BaseDuetColor"
          >
            #de2362
          </div>
          <div
            class="css-lxho8i-BaseDuetColor"
          >
            rgb(222, 35, 98)
          </div>
        </td>
        <td>
          <div
            class="css-1c55f8o-BaseDuetColor"
          >
            Status Danger
          </div>
          <p>
             Danger red that is accessible with white. Only used in special cases like form validation and messaging.
          </p>
        </td>
        <td>
          <code
            class="css-yzbbbe-BaseDuetColor"
          >
            $color-danger
          </code>
          <code
            class="css-nedzn2-BaseDuetColor"
          >
            var(--color-danger)
          </code>
        </td>
        <td
          class="css-1wvasw1-BaseDuetColor"
        >
          <span
            class="css-10wa0qw-BaseDuetColor"
          >
            4.64:1
          </span>
          <svg
            aria-hidden="true"
            class="css-5d88xw-BaseDuetColor"
            fill="currentColor"
            height="16"
            role="img"
            style="display: inline-block; user-select: none; vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M13.78 4.22a.75.75 0 010 1.06l-7.25 7.25a.75.75 0 01-1.06 0L2.22 9.28a.75.75 0 011.06-1.06L6 10.94l6.72-6.72a.75.75 0 011.06 0z"
              fill-rule="evenodd"
            />
          </svg>
        </td>
        <td
          class="css-1wvasw1-BaseDuetColor"
        >
          <svg
            aria-hidden="true"
            class="css-vw0gn3"
            fill="currentColor"
            height="16"
            role="img"
            style="display: inline-block; user-select: none; vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M8 16A8 8 0 108 0a8 8 0 000 16zm3.78-9.72a.75.75 0 00-1.06-1.06L6.75 9.19 5.28 7.72a.75.75 0 00-1.06 1.06l2 2a.75.75 0 001.06 0l4.5-4.5z"
              fill-rule="evenodd"
            />
          </svg>
        </td>
      </tr>
      <tr>
        <td>
          <div
            class="css-5qp9u2-BaseDuetColor"
            style="display: inline-block;"
          >
            <div
              class="css-12bc92q-BaseDuetColor"
            />
          </div>
          <div
            class="css-lxho8i-BaseDuetColor"
          >
            #f7b228
          </div>
          <div
            class="css-lxho8i-BaseDuetColor"
          >
            rgb(247, 178, 40)
          </div>
        </td>
        <td>
          <div
            class="css-1c55f8o-BaseDuetColor"
          >
            Status Warning
          </div>
          <p>
             Warning orange (non-accessible) is only used in special cases like form validation and messaging.
          </p>
        </td>
        <td>
          <code
            class="css-yzbbbe-BaseDuetColor"
          >
            $color-warning
          </code>
          <code
            class="css-nedzn2-BaseDuetColor"
          >
            var(--color-warning)
          </code>
        </td>
        <td
          class="css-1wvasw1-BaseDuetColor"
        >
          <span
            class="css-10wa0qw-BaseDuetColor"
          >
            1.85:1
          </span>
          <svg
            aria-hidden="true"
            class="css-eghr9r-BaseDuetColor"
            fill="currentColor"
            height="16"
            role="img"
            style="display: inline-block; user-select: none; vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M3.72 3.72a.75.75 0 011.06 0L8 6.94l3.22-3.22a.75.75 0 111.06 1.06L9.06 8l3.22 3.22a.75.75 0 11-1.06 1.06L8 9.06l-3.22 3.22a.75.75 0 01-1.06-1.06L6.94 8 3.72 4.78a.75.75 0 010-1.06z"
              fill-rule="evenodd"
            />
          </svg>
        </td>
        <td
          class="css-1wvasw1-BaseDuetColor"
        >
          <svg
            aria-hidden="true"
            class="css-vw0gn3"
            fill="currentColor"
            height="16"
            role="img"
            style="display: inline-block; user-select: none; vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M8 16A8 8 0 108 0a8 8 0 000 16zm3.78-9.72a.75.75 0 00-1.06-1.06L6.75 9.19 5.28 7.72a.75.75 0 00-1.06 1.06l2 2a.75.75 0 001.06 0l4.5-4.5z"
              fill-rule="evenodd"
            />
          </svg>
        </td>
      </tr>
      <tr>
        <td>
          <div
            class="css-5qp9u2-BaseDuetColor"
            style="display: inline-block;"
          >
            <div
              class="css-12q4pw7-BaseDuetColor"
            />
          </div>
          <div
            class="css-lxho8i-BaseDuetColor"
          >
            #00875a
          </div>
          <div
            class="css-lxho8i-BaseDuetColor"
          >
            rgb(0, 135, 90)
          </div>
        </td>
        <td>
          <div
            class="css-1c55f8o-BaseDuetColor"
          >
            Status Success
          </div>
          <p>
             Success green that is accessible with white. Only used in special cases like form validation and messaging.
          </p>
        </td>
        <td>
          <code
            class="css-yzbbbe-BaseDuetColor"
          >
            $color-success
          </code>
          <code
            class="css-nedzn2-BaseDuetColor"
          >
            var(--color-success)
          </code>
        </td>
        <td
          class="css-1wvasw1-BaseDuetColor"
        >
          <span
            class="css-10wa0qw-BaseDuetColor"
          >
            4.55:1
          </span>
          <svg
            aria-hidden="true"
            class="css-5d88xw-BaseDuetColor"
            fill="currentColor"
            height="16"
            role="img"
            style="display: inline-block; user-select: none; vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M13.78 4.22a.75.75 0 010 1.06l-7.25 7.25a.75.75 0 01-1.06 0L2.22 9.28a.75.75 0 011.06-1.06L6 10.94l6.72-6.72a.75.75 0 011.06 0z"
              fill-rule="evenodd"
            />
          </svg>
        </td>
        <td
          class="css-1wvasw1-BaseDuetColor"
        >
          <svg
            aria-hidden="true"
            class="css-vw0gn3"
            fill="currentColor"
            height="16"
            role="img"
            style="display: inline-block; user-select: none; vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M8 16A8 8 0 108 0a8 8 0 000 16zm3.78-9.72a.75.75 0 00-1.06-1.06L6.75 9.19 5.28 7.72a.75.75 0 00-1.06 1.06l2 2a.75.75 0 001.06 0l4.5-4.5z"
              fill-rule="evenodd"
            />
          </svg>
        </td>
      </tr>
      <tr>
        <td>
          <div
            class="css-5qp9u2-BaseDuetColor"
            style="display: inline-block;"
          >
            <div
              class="css-1lgp57y-BaseDuetColor"
            />
          </div>
          <div
            class="css-lxho8i-BaseDuetColor"
          >
            #657787
          </div>
          <div
            class="css-lxho8i-BaseDuetColor"
          >
            rgb(101, 119, 135)
          </div>
        </td>
        <td>
          <div
            class="css-1c55f8o-BaseDuetColor"
          >
            Gray Darker
          </div>
          <p>
             Darker gray that is accessible with white when used for text. Most commonly used as a text color for interface help texts.
          </p>
        </td>
        <td>
          <code
            class="css-yzbbbe-BaseDuetColor"
          >
            $color-gray-darker
          </code>
          <code
            class="css-nedzn2-BaseDuetColor"
          >
            var(--color-gray-darker)
          </code>
        </td>
        <td
          class="css-1wvasw1-BaseDuetColor"
        >
          <span
            class="css-10wa0qw-BaseDuetColor"
          >
            4.62:1
          </span>
          <svg
            aria-hidden="true"
            class="css-5d88xw-BaseDuetColor"
            fill="currentColor"
            height="16"
            role="img"
            style="display: inline-block; user-select: none; vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M13.78 4.22a.75.75 0 010 1.06l-7.25 7.25a.75.75 0 01-1.06 0L2.22 9.28a.75.75 0 011.06-1.06L6 10.94l6.72-6.72a.75.75 0 011.06 0z"
              fill-rule="evenodd"
            />
          </svg>
        </td>
        <td
          class="css-1wvasw1-BaseDuetColor"
        >
          <svg
            aria-hidden="true"
            class="css-vw0gn3"
            fill="currentColor"
            height="16"
            role="img"
            style="display: inline-block; user-select: none; vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M8 16A8 8 0 108 0a8 8 0 000 16zm3.78-9.72a.75.75 0 00-1.06-1.06L6.75 9.19 5.28 7.72a.75.75 0 00-1.06 1.06l2 2a.75.75 0 001.06 0l4.5-4.5z"
              fill-rule="evenodd"
            />
          </svg>
        </td>
      </tr>
      <tr>
        <td>
          <div
            class="css-5qp9u2-BaseDuetColor"
            style="display: inline-block;"
          >
            <div
              class="css-2ps3j-BaseDuetColor"
            />
          </div>
          <div
            class="css-lxho8i-BaseDuetColor"
          >
            #909599
          </div>
          <div
            class="css-lxho8i-BaseDuetColor"
          >
            rgb(144, 149, 153)
          </div>
        </td>
        <td>
          <div
            class="css-1c55f8o-BaseDuetColor"
          >
            Gray Dark
          </div>
          <p>
             Dark gray is used for form borders that need to pass WCAG Level AA non-text contrast requirements. Please note that this color isn’t accessible when used for text.
          </p>
        </td>
        <td>
          <code
            class="css-yzbbbe-BaseDuetColor"
          >
            $color-gray-dark
          </code>
          <code
            class="css-nedzn2-BaseDuetColor"
          >
            var(--color-gray-dark)
          </code>
        </td>
        <td
          class="css-1wvasw1-BaseDuetColor"
        >
          <span
            class="css-10wa0qw-BaseDuetColor"
          >
            3.02:1
          </span>
          <svg
            aria-hidden="true"
            class="css-eghr9r-BaseDuetColor"
            fill="currentColor"
            height="16"
            role="img"
            style="display: inline-block; user-select: none; vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M3.72 3.72a.75.75 0 011.06 0L8 6.94l3.22-3.22a.75.75 0 111.06 1.06L9.06 8l3.22 3.22a.75.75 0 11-1.06 1.06L8 9.06l-3.22 3.22a.75.75 0 01-1.06-1.06L6.94 8 3.72 4.78a.75.75 0 010-1.06z"
              fill-rule="evenodd"
            />
          </svg>
        </td>
        <td
          class="css-1wvasw1-BaseDuetColor"
        >
          <svg
            aria-hidden="true"
            class="css-vw0gn3"
            fill="currentColor"
            height="16"
            role="img"
            style="display: inline-block; user-select: none; vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M8 16A8 8 0 108 0a8 8 0 000 16zm3.78-9.72a.75.75 0 00-1.06-1.06L6.75 9.19 5.28 7.72a.75.75 0 00-1.06 1.06l2 2a.75.75 0 001.06 0l4.5-4.5z"
              fill-rule="evenodd"
            />
          </svg>
        </td>
      </tr>
      <tr>
        <td>
          <div
            class="css-5qp9u2-BaseDuetColor"
            style="display: inline-block;"
          >
            <div
              class="css-16hgej1-BaseDuetColor"
            />
          </div>
          <div
            class="css-lxho8i-BaseDuetColor"
          >
            #7a01c4
          </div>
          <div
            class="css-lxho8i-BaseDuetColor"
          >
            rgb(122, 1, 196)
          </div>
        </td>
        <td>
          <div
            class="css-1c55f8o-BaseDuetColor"
          >
            Data 01
          </div>
          <p>
             Data visualization color that is accessible with white. Please note that this color should not be used for any other purpose.
          </p>
        </td>
        <td>
          <code
            class="css-yzbbbe-BaseDuetColor"
          >
            $color-data-01
          </code>
          <code
            class="css-nedzn2-BaseDuetColor"
          >
            var(--color-data-01)
          </code>
        </td>
        <td
          class="css-1wvasw1-BaseDuetColor"
        >
          <span
            class="css-10wa0qw-BaseDuetColor"
          >
            7.99:1
          </span>
          <svg
            aria-hidden="true"
            class="css-5d88xw-BaseDuetColor"
            fill="currentColor"
            height="16"
            role="img"
            style="display: inline-block; user-select: none; vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M13.78 4.22a.75.75 0 010 1.06l-7.25 7.25a.75.75 0 01-1.06 0L2.22 9.28a.75.75 0 011.06-1.06L6 10.94l6.72-6.72a.75.75 0 011.06 0z"
              fill-rule="evenodd"
            />
          </svg>
        </td>
        <td
          class="css-1wvasw1-BaseDuetColor"
        >
          <svg
            aria-hidden="true"
            class="css-tu3bwo"
            fill="currentColor"
            height="16"
            role="img"
            style="display: inline-block; user-select: none; vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M8.22 1.754a.25.25 0 00-.44 0L1.698 13.132a.25.25 0 00.22.368h12.164a.25.25 0 00.22-.368L8.22 1.754zm-1.763-.707c.659-1.234 2.427-1.234 3.086 0l6.082 11.378A1.75 1.75 0 0114.082 15H1.918a1.75 1.75 0 01-1.543-2.575L6.457 1.047zM9 11a1 1 0 11-2 0 1 1 0 012 0zm-.25-5.25a.75.75 0 00-1.5 0v2.5a.75.75 0 001.5 0v-2.5z"
              fill-rule="evenodd"
            />
          </svg>
        </td>
      </tr>
      <tr>
        <td>
          <div
            class="css-5qp9u2-BaseDuetColor"
            style="display: inline-block;"
          >
            <div
              class="css-1y32sq7-BaseDuetColor"
            />
          </div>
          <div
            class="css-lxho8i-BaseDuetColor"
          >
            #c21565
          </div>
          <div
            class="css-lxho8i-BaseDuetColor"
          >
            rgb(194, 21, 101)
          </div>
        </td>
        <td>
          <div
            class="css-1c55f8o-BaseDuetColor"
          >
            Data 06
          </div>
          <p>
             Data visualization color that is accessible with white. Please note that this color should not be used for any other purpose.
          </p>
        </td>
        <td>
          <code
            class="css-yzbbbe-BaseDuetColor"
          >
            $color-data-06
          </code>
          <code
            class="css-nedzn2-BaseDuetColor"
          >
            var(--color-data-06)
          </code>
        </td>
        <td
          class="css-1wvasw1-BaseDuetColor"
        >
          <span
            class="css-10wa0qw-BaseDuetColor"
          >
            5.85:1
          </span>
          <svg
            aria-hidden="true"
            class="css-5d88xw-BaseDuetColor"
            fill="currentColor"
            height="16"
            role="img"
            style="display: inline-block; user-select: none; vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M13.78 4.22a.75.75 0 010 1.06l-7.25 7.25a.75.75 0 01-1.06 0L2.22 9.28a.75.75 0 011.06-1.06L6 10.94l6.72-6.72a.75.75 0 011.06 0z"
              fill-rule="evenodd"
            />
          </svg>
        </td>
        <td
          class="css-1wvasw1-BaseDuetColor"
        >
          <svg
            aria-hidden="true"
            class="css-t2ml4u"
            fill="currentColor"
            height="16"
            role="img"
            style="display: inline-block; user-select: none; vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M2.343 13.657A8 8 0 1113.657 2.343 8 8 0 012.343 13.657zM6.03 4.97a.75.75 0 00-1.06 1.06L6.94 8 4.97 9.97a.75.75 0 101.06 1.06L8 9.06l1.97 1.97a.75.75 0 101.06-1.06L9.06 8l1.97-1.97a.75.75 0 10-1.06-1.06L8 6.94 6.03 4.97z"
              fill-rule="evenodd"
            />
          </svg>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
